--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,16 +1,80 @@
+.contact-container{
+    width: 100%;
+    display: flex;
+    position: relative;
+    box-sizing: border-box;
+    text-align: left;
+    align-items: center;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    justify-content:space-around;
+    text-decoration: none;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  
+}
+
 .Contact{
     display: flex;
     margin: 0.5rem ;
-    padding: 1.1rem 3rem;
-    height: 77px;
+    padding: 1rem ;
+    height: 40px;
     justify-content: space-around;
     align-items: center;
-   
-    overflow: hidden;
+       overflow: hidden;
     position: relative;
     transition: opacity 500ms ease-in-out;
     
 }
+
+.contact-text{
+    justify-content: center;
+text-align: center;
+}
+
+.contact-text-names{
+margin: 1rem 2rem;
+
+}
+.contact-text-email{
+    margin: 0 ;
+ /* justify-content: left;
+ align-items: flex-end; */
+    }
+
+span{
+    font-size: 1rem;
+ 
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.00938em;
+    display: block;
+    
+    
+}
+
+p{
+
+        font-size: 0.875rem;
+        font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+        font-weight: 400;
+        line-height: 1.43;
+        letter-spacing: 0.01071em;
+        color: rgba(0, 0, 0, 0.54);
+}
+
+.icons{
+    top: 50%;
+    right: 16px;
+    position: absolute;
+    transform: translateY(-50%);
+
+}
+
+.icon{
+    margin: 0 1rem;
+}
+
+
 .Contact-name{
  /* position:absolute; */
  display: inline-block;
@@ -20,3 +84,4 @@
     position: relative;
 display: block;
 }
+
