--- a/src/DeleteDialog.css
+++ b/src/DeleteDialog.css
@@ -1,3 +1,123 @@
-.close-avatar{
-    background-color:rgb(38, 38, 230)
+.dealog-container{
+    position: fixed;
+    z-index: 1300;
+    right: 30%;
+    bottom: 0;
+    top: 30%;
+    left: 0;
+    font-family: 'Varela Round', sans-serif;
+
+    }
+
+.dialog{
+    opacity: 1;
+    transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    
+    outline: 0;
+  
+    align-items: center;
+    display: flex;
+    
+}
+
+.dialog-paper{
+    background-color: #fff;
+    color: rgba(0, 0, 0, 0.87);
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-radius: 4px;
+    box-shadow: 0px 11px 15px -7px rgb(0 0 0 / 20%), 0px 24px 38px 3px rgb(0 0 0 / 14%), 0px 9px 46px 8px rgb(0 0 0 / 12%);
+    margin: 32px;
+    position: relative;
+    overflow-y: auto;
+height:250px;
+width: 280px;
+    display: flex;
+    flex-direction: column;
+ 
+}
+
+/* .dialog-title{
+display: block;
+flex: 0 0 auto;
+
+background-color:rgb(237, 230, 161);
+} */
+
+
+
+.dialog-list{
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    list-style: none;
+    display: block;
+
+}
+
+
+
+.list-item{
+    width: 100%;
+    display: flex;
+    position: relative;
+    box-sizing: border-box;
+    text-align: left;
+    align-items: center;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    justify-content: flex-start;
+    text-decoration: none;
+    padding-left: 16px;
+    padding-right: 16px;
+    color: inherit;
+    border: 0;
+    cursor: pointer;
+    /* margin: 0; */
+}
+
+.list-item-cancel:hover{
+    background-color: rgba(171, 188, 241, 0.4);
+}
+
+.list-item-delete:hover{
+    background-color: rgba(208, 115, 115, 0.3) 
+    
+}
+
+
+.list-item-icon{
+    /* min-width: 50px; */
+    /* flex-shrink: 0; */
+    display: block;
+    text-align: left;
+    cursor: pointer;
+    height: 40%;
+width: 40%;
+margin-left: 1rem;
+}
+
+.deleteDealog-icon{
+    width: 40px;
+    height: 40px;
+}
+
+.list-item-text-container{
+    display: block;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    text-align: left;
+    width: 50%;
+}
+
+.list-item-text{
+    font-size: 1.5rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.00938em;
+    margin-left: 0;
+    text-align: center;
+    cursor: pointer;
 }
